--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     restart: unless-stopped
     network_mode: "host"
     volumes:
-      - ./conf:/opt/adguardhome/conf:ro
+      - ./conf:/opt/adguardhome/conf
 
   nginx:
     image: nginx:alpine
@@ -15,4 +15,4 @@ services:
     restart: unless-stopped
     network_mode: "host"
     volumes:
-      - ./conf:/etc/nginx:ro
+      - ./conf/nginx.conf:/etc/nginx/nginx.conf:ro
