--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,9 @@ services:
     image: adguard/adguardhome
     container_name: adguardhome
     restart: unless-stopped
+    logging:
+        options:
+            max-size: "3m"
     network_mode: "host"
     volumes:
       - ./conf:/opt/adguardhome/conf
@@ -13,6 +16,9 @@ services:
     image: nginx:alpine
     container_name: nginx
     restart: unless-stopped
+    logging:
+        options:
+            max-size: "3m"
     network_mode: "host"
     volumes:
       - ./conf/nginx.conf:/etc/nginx/nginx.conf:ro
