--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,4 +21,4 @@ services:
         max-size: "3m"
     network_mode: "host"
     volumes:
-      - ./conf/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./conf:/etc/nginx
