--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - ./conf:/opt/adguardhome/conf
 
   nginx:
-    image: nginx:1.26-alpine
+    image: nginx:1.26
     container_name: sniproxy-nginx
     restart: unless-stopped
     logging:
